noinst_LIBRARIES = libFbTk.a

libFbTk_a_SOURCES = \
	App.hh App.cc Color.cc Color.hh \
	EventHandler.hh EventManager.hh EventManager.cc \
	FbWindow.hh FbWindow.cc\
	FbPixmap.hh FbPixmap.cc\
	NotCopyable.hh \
	Transparent.hh  Transparent.cc \
	Resource.hh Resource.cc \
	FbDrawable.hh FbDrawable.cc \
	GContext.hh GContext.cc \
	XrmDatabaseHelper.hh StringUtil.hh StringUtil.cc 

